--- a/10.两数之和（判断索引）.html
+++ b/10.两数之和（判断索引）.html
@@ -28,21 +28,39 @@
         */
         var numbers = [2, 7, 11, 15],
             target = 18
+        // var twoSum = function (numbers, target) {
+        //     let len = numbers.length
+        //     let i = 0
+        //     let diff = 0
+        //     let obj = {},
+        //         arr = []
+        //     while (i < len) {
+        //         diff = target - numbers[i]
+        //         if (obj[numbers[i]]) {
+        //             arr = [numbers.indexOf(diff) + 1, i + 1]
+        //         }
+        //         obj[diff] = true
+        //         i++
+        //     }
+        //     return arr
+        // };
+        // console.log(twoSum(numbers, target))
+
+
+        // 方法二
+        //  双指针法
         var twoSum = function (numbers, target) {
-            let len = numbers.length
-            let i = 0
-            let diff = 0
-            let obj = {},
-                arr = []
-            while (i < len) {
-                diff = target - numbers[i]
-                if (obj[numbers[i]]) {
-                    arr = [numbers.indexOf(diff) + 1, i + 1]
+            let left = 0
+            let right = numbers.length - 1
+            while (left < right) {
+                if (numbers[left] + numbers[right] == target) {
+                    return [left + 1, right + 1]
+                }else if(numbers[left] + numbers[right] > target){
+                    right--
+                }else{
+                    left++
                 }
-                obj[diff] = true
-                i++
             }
-            return arr
         };
         console.log(twoSum(numbers, target))
     </script>
