--- a/11.递归.html
+++ b/11.递归.html
@@ -71,7 +71,17 @@
         }
         console.log(triangle(1))
 
-
+        var reverseList = function (head) {
+            let [prev, curr] = [null, head]
+            while (curr) {
+                let tmp = curr.next;
+                curr.next = prev;
+                prev = curr;
+                curr = tmp;
+            }
+            return prev
+        };
+        console.log(reverseList([1,2,3,4,5]))
     </script>
 </body>
 
