--- a/快速排序.html
+++ b/快速排序.html
@@ -10,35 +10,70 @@
 <body>
     <script>
         let arr = [6, 3, 7, 9, 5, 11, 1, 2, 8, 4, 10]
-        function one(arr, left, right) {
+        // function one(arr, left, right) {
+        //     if (left < right) {
+        //         let i = left, j = right, key = arr[left];
+        //         while (i < j) {
+        //             while (i < j && arr[j] > key) {
+        //                 j--;
+        //             }
+        //             if (i < j) {
+        //                 arr[i] = arr[j];
+        //                 i++;
+        //             }
+        //             while (i < j && arr[i] < key) {
+        //                 i++;
+        //             }
+        //             if (i < j) {
+        //                 arr[j] = arr[i];
+        //                 j--
+        //             }
+        //         }
+        //         arr[i] = key
+        //         one(arr, left, i); // 递归调用 
+        //         one(arr, i + 1, right);
+        //     }
+        //     return arr
+        // }
+
+
+
+        // console.log(one(arr, 0, arr.length - 1))
+
+
+        console.log(quickSort(arr))
+        function quickSort(arr, left, right) {
+            var len = arr.length,
+                partitionIndex,
+                left = typeof left != 'number' ? 0 : left,
+                right = typeof right != 'number' ? len - 1 : right;
+
             if (left < right) {
-                let i = left, j = right, key = arr[left];
-                while (i < j) {
-                    while (i < j && arr[j] > key) {
-                        j--;
-                    }
-                    if (i < j) {
-                        arr[i] = arr[j];
-                        i++;
-                    }
-                    while (i < j && arr[i] < key) {
-                        i++;
-                    }
-                    if (i < j) {
-                        arr[j] = arr[i];
-                        j--
-                    }
-                }
-                arr[i] = key
-                one(arr, left, i); // 递归调用 
-                one(arr, i + 1, right);
+                partitionIndex = partition(arr, left, right);
+                quickSort(arr, left, partitionIndex - 1);
+                quickSort(arr, partitionIndex + 1, right);
             }
-            return arr
+            return arr;
         }
 
+        function partition(arr, left, right) {     // 分区操作
+            var pivot = left,                      // 设定基准值（pivot）
+                index = pivot + 1;
+            for (var i = index; i <= right; i++) {
+                if (arr[i] < arr[pivot]) {
+                    swap(arr, i, index);
+                    index++;
+                }
+            }
+            swap(arr, pivot, index - 1);
+            return index - 1;
+        }
 
-
-        console.log(one(arr, 0, arr.length - 1))
+        function swap(arr, i, j) {
+            var temp = arr[i];
+            arr[i] = arr[j];
+            arr[j] = temp;
+        }
 
     </script>
 </body>
