add list 转换 tree

--- a/01.括号生成.html
+++ b/01.括号生成.html
@@ -104,6 +104,75 @@
       return res.concat(leftArr, rightArr)
     }
     console.log(sort(arr))
+
+
+    // // 按 parentId 分组
+    // function groupBy(data = []) {
+    //   let group = {};
+    //   data.forEach((v) => {
+    //     let key = v['parentId'];
+    //     if (!group.hasOwnProperty(key)) {
+    //       group[key] = [v];
+    //     } else {
+    //       group[key].push(v);
+    //     }
+    //   });
+    //   console.log('group', group);
+    //   return group;
+    // }
+    // // 树生成, 递归调用
+    // function createTree(data, parent = null) {
+    //   let TreeNode = {};
+    //   let treeData, pid, children;
+    //   treeData = [];
+
+    //   if (parent === null) {
+    //     pid = 0;
+    //   } else {
+    //     pid = parent['id'];
+    //   }
+
+    //   if (data.hasOwnProperty(pid)) {
+    //     data[pid].forEach((val) => {
+    //       TreeNode = Object.assign({}, val);
+    //       children = this.createTree(data, TreeNode);
+    //       treeData.push(TreeNode);
+    //       treeData[treeData.length - 1].children = children;
+    //     });
+    //   }
+    //   return treeData;
+    // }
+
+    // // 生成树
+    // function create(data) {
+    //   return this.createTree(this.groupBy(data));
+    // }
+
+
+    function create(list, parId) {
+      function loop(parId) {
+        let res = [];
+        list.forEach(item => {
+          const parentId = item.parentId
+          if (parentId == parId) {
+            item.children = loop(item.id)
+            res.push(item)
+          }
+        })
+        return res
+      }
+      return loop(parId)
+    }
+    const list = [
+      { parentId: 0, text: '全部', id: 1 },
+      { parentId: 1, text: '一级', id: 2 },
+      { parentId: 2, text: '二级', id: 3 },
+      { parentId: 1, text: '一级', id: 4 },
+      { parentId: 2, text: '二级', id: 5 },
+      { parentId: 3, text: '三级', id: 6 },
+    ]
+    console.log(create(list, 0))
+
   </script>
 </body>
 
